# Arfima

./: Cargo.toml  LICENSE  README.md
src/: app.rs  hex_to_color.rs  icons.rs  main.rs
src/app/: app.rs  app_event.rs  centered_rect.rs  entries_component.rs  error.rs  help.rs  input_mode.rs  instructions_component.rs  key_event_handler.rs  mod.rs  precommand.rs  show_modal.rs  ui.rs  window.rs
src/app/components/: entries_component.rs  help_table_component.rs  instructions_component.rs  mod.rs  title_component.rs
src/app/input/: mod.rs
src/app/widgets/: centered_rect.rs  command.rs  entries_table.rs  error.rs  help_table.rs  input.rs  instructions.rs  minimal_entries_table.rs  mod.rs  precommand.rs  title.rs
src/app/windows/: dummy.rs  file_manager_window.rs  mod.rs  split.rs  user_directories.rs
src/command/: error.rs  mod.rs  quit.rs  save.rs  set.rs
src/config/: common_entries.rs  error.rs  history.rs  mod.rs  number.rs
src/data/: mod.rs  package.rs
src/data/help/: adding_bindings.rs  help_bindings.rs  mod.rs  normal_bindings.rs  removing_bindings.rs  renaming_bindings.rs
src/data/icons/: mod.rs
src/directory_entry/: directory_entry_builder.rs  directory_entry_type.rs  error.rs  mod.rs  read_directory.rs
src/types/: circular_buffer.rs  mod.rs  natural_string.rs
src/utils/: format_keybindings.rs  get_icon_and_color.rs  mod.rs  open_file.rs  process_command.rs  wrap_text.rs
src/utils/file/: add_path.rs  delete_path.rs  expand_tilde.rs  file_error.rs  file_result.rs  get_opening_methods.rs  mod.rs  open_file.rs  rename_path.rs
(+47 files in other folders)
