[package]
name = "arfima"
version = "0.1.0"
description = "a file manager cli tool"
authors = ["Aria AzadiPour <aazadipour@pm.me>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.41"
textwrap = "0.16.2"
dashmap = "6.1.0"
once_cell = "1.21.3"
directories = "6.0.0"
toml = "0.9.4"
serde = { version = "1.0.219", features = ["derive"] }
nom = "7.1.3"
crossbeam = "0.8.4"
